dataset1235/2025-2/2947369575/users/3825365377/executions/1003782500_1462915504.log
== RUN (2025-09-01 23:23:17)
-- CODE: 
nomeeeeee = int(input())
print(nomeeeeee)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
9
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
6
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
11
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
8
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
4
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 23:33:43)
-- CODE: 
from math import *

lado = float(input())

apotema = lado / (2 * math.tan(math.pi / 5))
area = 5/2 * lado * apotema

print(round(area, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / (2 * math.tan(math.pi / 5))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / (2 * math.tan(math.pi / 5))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / (2 * math.tan(math.pi / 5))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / (2 * math.tan(math.pi / 5))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / (2 * math.tan(math.pi / 5))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / (2 * math.tan(math.pi / 5))
                          ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 23:23:11)
-- CODE: 
nomeeeeee = int(Input())
print(nomeeeeee)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nomeeeeee = int(Input())
                    ^^^^^
NameError: name 'Input' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nomeeeeee = int(Input())
                    ^^^^^
NameError: name 'Input' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nomeeeeee = int(Input())
                    ^^^^^
NameError: name 'Input' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nomeeeeee = int(Input())
                    ^^^^^
NameError: name 'Input' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nomeeeeee = int(Input())
                    ^^^^^
NameError: name 'Input' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    nomeeeeee = int(Input())
                    ^^^^^
NameError: name 'Input' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 23:31:21)
-- CODE: 
from math import *

lado = float(input())

apotema = lado / (2 * math.tan(math.pi / 5))
area = 5/2 * lado * apotema


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / (2 * math.tan(math.pi / 5))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / (2 * math.tan(math.pi / 5))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / (2 * math.tan(math.pi / 5))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / (2 * math.tan(math.pi / 5))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / (2 * math.tan(math.pi / 5))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / (2 * math.tan(math.pi / 5))
                          ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 23:37:12)
-- CODE: 
import math

lado = float(input())

apotema = lado / (2 * math.tan(math.pi / 5))
area = 5/2 * lado * apotema

print(round(area, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 23:23:35)
-- CODE: 
nomeeeeee = str(input())
print(nomeeeeee)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
9
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
6
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
11
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
8
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
4
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
